--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Android Screen Layout</title>
-  <link rel="stylesheet" href="sytle/style.css">
+  <title>Android Fit Screen</title>
+  <link rel="stylesheet" type="text/css" href="sytle/style.css">
 </head>
 <body>
   <div class="container">
-    <h1 class="header">Welcome to Android Screen</h1>
-    <p class="content">This is a sample Android screen layout.</p>
+    <h1 class="header">Welcome to Android Fit Screen</h1>
+    <p class="content">This is a sample Android screen layout that fits the screen.</p>
     <a href="#" class="button">Click Me</a>
   </div>
 </body>
