--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="header">Welcome to Android Fit Screen</h1>
+    <div class="div2">
+        <h1 class="header">Welcome to Android Fit Screen</h1>
     <p class="content">This is a sample Android screen layout that fits the screen.</p>
     <a href="#" class="button">Click Me</a>
+    </div>
   </div>
 </body>
 </html>
