--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Android Fit Screen</title>
-  <link rel="stylesheet" type="text/css" href="sytle/style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Mobile Responsive Design</title>
+<link rel="stylesheet" href="sytle/style.css">
 </head>
 <body>
   <div class="container">
-    <div class="div2">
-        <h1 class="header">Welcome to Android Fit Screen</h1>
-    <p class="content">This is a sample Android screen layout that fits the screen.</p>
-    <a href="#" class="button">Click Me</a>
+    <div class="header">
+      <h1>Mobile Responsive Design</h1>
+      <div class="menu-icon">&#9776;</div>
     </div>
+    <ul class="navigation">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel justo vel augue tincidunt posuere.</p>
+    <button>Call to Action</button>
   </div>
+  <script>
+    // JavaScript to toggle navigation menu
+    const menuIcon = document.querySelector('.menu-icon');
+    const navigation = document.querySelector('.navigation');
+
+    menuIcon.addEventListener('click', () => {
+      navigation.classList.toggle('show');
+    });
+  </script>
 </body>
 </html>
